# CrewAI_Testing

./: README.md  coverage.xml  pyproject.toml
src/testing/: crew.py  main.py
src/testing/config/: agents.yaml  tasks.yaml
src/testing/tools/: file_tools.py  test_tools.py
tests/: test_webapp.py
