[project]
name = "testing"
version = "0.1.0"
description = "testing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.8.1",
    "flask>=3.1.2",
    "litellm>=1.75.3",
]

[project.scripts]
testing = "testing.main:run"
run_crew = "testing.main:run"
train = "testing.main:train"
replay = "testing.main:replay"
test = "testing.main:test"
run_with_trigger = "testing.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
